migratal na mysql, spremenil link za bazo v config

--- a/config.cfg
+++ b/config.cfg
@@ -2,5 +2,5 @@ import os
 
 DEBUG=True
 SECRET_KEY='bhdscjkjhe3151831($&B87etfaegf'
-SQLALCHEMY_DATABASE_URI='sqlite:///{}'.format(os.path.join(os.path.dirname(__file__), 'data.db'))
+SQLALCHEMY_DATABASE_URI='mysql+pymysql://luka:kemspoj@localhost/kemspoj'
 SQLALCHEMY_TRACK_MODIFICATIONS=False
