--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-Flask
-flask-login
-flask-sqlalchemy
-flask-wtf
-flask-bootstrap
+Flask==0.12.2
+flask-login==0.4.1
+flask-sqlalchemy==2.3.2
+flask-wtf==0.14.2
 flask-dance==1.4.0
-sqlalchemy_utils 
-blinker
-pymysql
+sqlalchemy_utils==0.33.3 
+blinker==1.4
+pymysql==0.9.3
 
